2014-06-17
 * Oprava živého vysílání
 2014-05-27
 * oprava dle data
2014-03-11
 * oprava stránkování
 * oprava nezobrazování položek, které nemají další díly
2014-03-11
 * Oprava zobrazení položek podle abecedy.
2014-02-25
 * Oprava živého přehrávání. Rozlišování typu (channel / episode) v HTTP requestu (Způsobovalo problémy u ČT24)
2014-02-16:
 * oprava otevirani videa po zmene stranky CT
 * Pridano 'Otevřít Web URL' a 'Otevřít Web Live URL' do hlavniho menu
   - umoznuje vyhledat porad na v prohlizeci na tabletu/telefonu
   - nasledne zkopirovat URL to XBMC napr pomoci Yatse
2014-02-05:
 * oprava obsluzneho linku
2013-12-28:
 * oprava nezobrazitelných videí
2013-09-23:
 * oprava živého vysílání
2013-09-21:
 * oprava pro změnu HTML kódu iVysílání (thanx to Ivo)
2013-09-08:
 * oprava vzhledávání podle datumu (thanx to Ivo)
2013-05-28:
 * oprava linku k videu
2013-03-26:
 * přidáno upozornění na bonus video
2013-02-06:
 * vyhledavani v archivu (beta) nyni zobrazuje max 100 vysledku hledani na 5 stranach
2013-02-05:
 * vyhledavani v archivu (beta)
2013-02-04:
 * oprava RTMP url pri pouziti nove librtmp (by mx3L)
2012-07-03:
 * pridano nastaveni mnozstvi zobrazenych stranek ve vypisu poradu 1,2,4,neomezene (by libor.zoubek)
2012-05-28:
 * oprava ziveho vysilani
2012-05-15:
 * oprava opet zmenene hlavicky pro zasilani pozadavku POST
2012-05-14:
 * oprava zmenene hlavicky pro zasilani pozadavku POST
2012-03-12:
 * special pro Spike :)
2011-11-15:
 * oprava zobrazovani poradu pod polozkou "Zive iVysilani" a pridan do nazvu poradu v nem nazev programu a odehrana doba.
2011-08-24:
 * zmena "dekoderu playlistu" z JSON na SIMPLEJSON, dle IVOse by melo zlepsit kompatibilitu...
2011-08-06:
 * pridani casoveho udaje do seznamu poradu podle datumu
2011-07-22:
 * nove funkce od IVO - Zobrazení podle datumu, Nejnovejsi porady, Nejsledovanejsi porady tydne, uprava parseru